--- a/.travis.yml
+++ b/.travis.yml
@@ -69,6 +69,14 @@ install:
     - sh ../configure --disable-shared --enable-static --prefix=/usr/local
     - sudo make install
 
+    # install zopflipng
+    - cd ~
+    - wget https://github.com/google/zopfli/archive/zopfli-1.0.1.tar.gz
+    - tar xf zopfli-1.0.1.tar.gz
+    - cd zopfli-zopfli-1.0.1
+    - make zopflipng
+    - cp zopflipng /usr/local/bin
+
     - cd $PROJECT_DIR
 script:
     - make test
